chore(workspace): downgrade project to java 17 compiler release
The Maven compiler release is set to Java 17, an LTS version,
to improve project compatibility. This change necessitated updating
list access methods (getFirst/getLast) in test files, which are
Java 21 specific, to use standard indexed access (get(0)/get(1)).
Additionally, minor formatting adjustments were made.